# processing-PGM-images

./: .gitignore  CMakeLists.txt  README.md
images/: lena.ascii.pgm
include/: image.hpp  image_operations.hpp  parse_source.hpp
src/: image.cpp  image_operations.cpp  main.cpp
